; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FindDnsCacheEx.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_FindDnsCacheEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }

@MAX_SIZE = common dso_local global i32 0, align 4
@DnsCache = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @FindDnsCacheEx(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load i32, i32* @MAX_SIZE, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %7, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %8, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  store i32 1, i32* %9, align 4
  br label %29

18:                                               ; preds = %2
  %19 = trunc i64 %12 to i32
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @GenDnsCacheKeyName(i8* %14, i32 %19, i8* %20, i32 %21)
  %23 = call i32 (...) @LockDnsCache()
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i8* %14, i8** %24, align 8
  %25 = load i32, i32* @DnsCache, align 4
  %26 = call %struct.TYPE_5__* @Search(i32 %25, %struct.TYPE_5__* %10)
  store %struct.TYPE_5__* %26, %struct.TYPE_5__** %6, align 8
  %27 = call i32 (...) @UnlockDnsCache()
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  store %struct.TYPE_5__* %28, %struct.TYPE_5__** %3, align 8
  store i32 1, i32* %9, align 4
  br label %29

29:                                               ; preds = %18, %17
  %30 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %30)
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %31
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GenDnsCacheKeyName(i8*, i32, i8*, i32) #2

declare dso_local i32 @LockDnsCache(...) #2

declare dso_local %struct.TYPE_5__* @Search(i32, %struct.TYPE_5__*) #2

declare dso_local i32 @UnlockDnsCache(...) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
